<!--this detail-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/value_16dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_16dp"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/judul"
                android:text="@string/nip" />

            <TextView
                android:id="@+id/txt_nip"
                style="@style/sub_judul"
                tools:text="@string/nip" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                style="@style/judul"
                android:text="@string/nama" />

            <TextView
                android:id="@+id/txt_nama"
                style="@style/sub_judul"
                tools:text="@string/nama" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                style="@style/judul"
                android:text="@string/jabatan" />

            <TextView
                android:id="@+id/txt_jabatan"
                style="@style/sub_judul"
                tools:text="@string/jabatan" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                style="@style/judul"
                android:text="@string/loker" />

            <TextView
                android:id="@+id/txt_loker"
                style="@style/sub_judul"
                tools:text="@string/loker" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>