<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--this detail-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_16dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/judul"
                            android:layout_weight="1"
                            android:text="@string/pelayanan" />

                        <TextView
                            android:id="@+id/txt_tanggal"
                            android:layout_marginRight="@dimen/value_5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            tools:text="tanggal" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/kegiatan"
                        style="@style/sub_judul"
                        tools:text="Baik sekali" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        style="@style/judul"
                        android:text="@string/integritas" />

                    <TextView
                        android:id="@+id/target"
                        style="@style/sub_judul"
                        tools:text="Baik sekali" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        style="@style/judul"
                        android:text="@string/komitmen" />

                    <TextView
                        android:id="@+id/kuantitas"
                        style="@style/sub_judul"
                        tools:text="Baik sekali" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        style="@style/judul"
                        android:text="@string/disiplin" />

                    <TextView
                        android:id="@+id/kuantitas1"
                        style="@style/sub_judul"
                        tools:text="Baik sekali" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        style="@style/judul"
                        android:text="@string/kerjasama" />

                    <TextView
                        android:id="@+id/kuantitas2"
                        style="@style/sub_judul"
                        tools:text="Baik sekali" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        style="@style/judul"
                        android:text="@string/kepemimpinan" />

                    <TextView
                        android:id="@+id/kuantitas3"
                        style="@style/sub_judul"
                        tools:text="Baik sekali" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                </LinearLayout>

            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>