<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/value_10dp"
    android:orientation="vertical"
    tools:context=".activity.menu.UbahAtasan">

    <TextView
        android:id="@+id/txt_id"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/nip" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text=":"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txt_nip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="198902282011012007" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/nama" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text=":"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txt_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="KRISTINADETA WESTIPIETAKASARI" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/jabatan" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text=":"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txt_jabatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="KEPALA SUBID PENGANGKATAN, PEMINDAHAN DAN PEMBERHENTIAN" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/loker" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text=":"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txt_loker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="2100999900" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_list"
        android:layout_marginTop="@dimen/value_16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>