<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_margin="@dimen/value_10dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginTop="@dimen/value_16dp"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_notif"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="25dp"
                android:scaleType="fitXY"
                tools:src="@mipmap/ic_waiting" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/value_5dp"
                android:layout_marginLeft="@dimen/value_16dp"
                android:layout_marginRight="@dimen/value_16dp"
                android:layout_marginTop="@dimen/value_5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_tanggal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    tools:text="12/2/2017" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/width"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/appbar_padding_top"
                        android:text="@string/kegiatan"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/appbar_padding_top"
                        android:text="@string/titik_dua"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/txt_kegiatan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/appbar_padding_top"
                        android:text="@string/kegiatan"
                        android:textColor="@android:color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/width"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/appbar_padding_top"
                        android:text="@string/kuantitas"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/appbar_padding_top"
                        android:text="@string/titik_dua"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/txt_kuantitas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/appbar_padding_top"
                        android:text="@string/kuantitas_satuan"
                        android:textColor="@android:color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/width"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/appbar_padding_top"
                        android:text="@string/kuantitas_satuan"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/appbar_padding_top"
                        android:text="@string/titik_dua"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/txt_satuan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/appbar_padding_top"
                        android:text="@string/kuantitas_satuan"
                        android:textColor="@android:color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/width"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/appbar_padding_top"
                        android:text="@string/skp_tahunan"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/appbar_padding_top"
                        android:text="@string/titik_dua"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/txt_skp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/appbar_padding_top"
                        android:text="@string/skp"
                        android:textColor="@android:color/black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:background="@color/yello">

                    <TextView
                        android:layout_width="@dimen/width"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/appbar_padding_top"
                        android:text="@string/status"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/appbar_padding_top"
                        android:text="@string/titik_dua"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/txt_hasil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/appbar_padding_top"
                        android:text="Menunggu"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>