<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:leftEdgeSwipeOffset="0dp"
    app:rightEdgeSwipeOffset="0dp">

    <!--button-->
    <!--this swip left-->
    <LinearLayout
        android:id="@+id/bottom_wraper"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageButton
            android:id="@+id/Delete"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:scaleType="center"
            android:src="@drawable/ic_delete" />

        <ImageButton
            android:id="@+id/Edit"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:scaleType="center"
            android:src="@drawable/ic_edit" />

    </LinearLayout>
    <!--end swip left-->

    <!--this detail-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_16dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/judul"
                            android:layout_weight="1"
                            android:text="@string/kegiatan" />

                        <TextView
                            android:id="@+id/txt_tanggal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="@dimen/value_5dp"
                            tools:text="tanggal" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/kegiatan"
                        style="@style/sub_judul"
                        tools:text="Baik sekali" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        style="@style/judul"
                        android:text="@string/kuantitas" />

                    <TextView
                        android:id="@+id/target"
                        style="@style/sub_judul"
                        tools:text="Baik sekali" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        style="@style/judul"
                        android:text="@string/kuantitas_satuan" />

                    <TextView
                        android:id="@+id/kuantitas"
                        style="@style/sub_judul"
                        tools:text="Baik sekali" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        style="@style/judul"
                        android:text="@string/status" />

                    <LinearLayout
                        android:id="@+id/background"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:background="@color/yello">

                        <TextView
                            android:id="@+id/selesai"
                            style="@style/sub_judul"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            tools:text="Baik sekali" />
                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</com.daimajia.swipe.SwipeLayout>